--- a/podcasternext/src/components/Player/styles.module.scss
+++ b/podcasternext/src/components/Player/styles.module.scss
@@ -32,6 +32,28 @@
     }
 }
 
+.currentEpisode {
+    text-align: center;
+
+    img {
+        border-radius: 1.5rem;
+    }
+
+    strong {
+        display: block;
+        margin-top: 2rem;
+        font: 600 1.25rem Lexend, sans-serif;
+        line-height: 1.75rem;
+    }
+
+    span {
+        display: block;
+        margin-top: 1rem;
+        opacity: 0.6;
+        line-height: 1.5rem;
+    }
+}
+
 .emptyPlayer {
     width: 100%;
     height: 20rem;
@@ -65,7 +87,7 @@
         .emptySlider {
             width: 100%;
             height: 4px;
-            background: var(--purple-300);
+            background: var(--purple-400);
             border-radius: 2px;
         }
     }
@@ -83,11 +105,26 @@
         border: 0;
         font-size: 0;
 
+        &:disabled {
+            cursor: not-allowed;
+        }
+
+        &:hover:not(:disabled) {
+            filter: brightness(0.7)
+        }
+
+
         &.playButton {
             width: 4rem;
             height: 4rem;
             border-radius: 1rem;
             background: var(--purple-400);
+
+            transition: filter 0.2s;
+
+            &:hover:not(:disabled) {
+                filter: brightness(0.95);
+            }
         }
     } 
 }
